--- a/Investment.ipynb
+++ b/Investment.ipynb
@@ -6,19 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "
     "\n",
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
     "\n",
-    ",
-    "\n",
+    "import numpy as np \n",
+    "import pandas as pd \n",
     "import os\n",
     "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
     "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))\n",
-    "\n",
-    "
+    "        print(os.path.join(dirname, filename))\n"
+   ]
   },
   {
    "cell_type": "code",
